Mon May  3 14:03:35 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/gimage_cmds.c
	* tools/pdbgen/pdb/gimage.pdb: fix rotten regexp eval
	
Mon May  3 21:44:27 BST 1999  Austin Donnelly  <austin@gimp.org>

	* app/palette.c: put up messages telling user about corrupted
 	    palette files as we load them.  In particular, try and catch
 	    MSDOS format files such as those distributed from Visibone's
 	    website.

Mon May  3 21:30:46 CEST 1999 Marc Lehmann <pcg@goof.com>

	* configure.in: changed order of cflags and library path in
        GIMP_CLFAGS and GIMP_LIBS.

Mon May  3 12:04:47 PDT 1999 Manish Singh <yosh@gimp.org>

	* tools/pdbgen/plug_in.pdb
	* tools/pdbgen/interface.pdb: new files

	* tools/pdbgen/app.pl: add no_id_lookup option

	* tools/pdbgen/Makefile.am: added new pdb files, plug_in.h

	* tools/pdbgen/enums.pl: plug_in.h enums

	* app/plug_in.[ch]: removed PDB stuff, exported current_plug_in,
	proc_defs, and plug_in_progress_{init,update}

	* app/interface_cmds.c
	* app/plug_in_cmds.c
	* app/internal_procs.c: pdbgenned files

	* app/Makefile.am: new files: interface_cmds.c, plug_in_cmds.c

Sun May  2 14:56:52 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/gimpimage.h: guide types used to start at 1, so make them
	start at 1

	* tools/pdbgen/enums.pl
	* app/guides_cmds.c: autogenned files reflect above change

1999-05-02  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/commands.c
	* app/layers_dialog.c
	* app/resize.[ch]: new scale/resize ui:
	Use size entries instead of text entries, chainbuttons instead of
	check buttons. Put the stuff into frames. Added labels for the
	original width and height.
	It's possible to change resolution/unit now, please test if it
	does the right thing.

	* libgimp/gimpsizeentry.c: allow lower == upper when checking
	boundaries.

Sat May  1 14:43:42 PDT 1999 Manish Singh <yosh@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb
	* app/fileops_cmds.c: fixed dumbass save code
