@@ -1,3 +1,9 @@
+Mon May  3 15:34:37 PDT 1999 Manish Singh <yosh@gimp.org>
+
+	* app/plug_in_cmds.c
+	* tools/pdbgen/pdb/plug_in.pdb: progress_init takes an int32, not
+	a display...
+
 Mon May  3 14:03:35 PDT 1999 Manish Singh <yosh@gimp.org>
 
 	* app/gimage_cmds.c
